# rp2350-hello-world

./: Cargo.toml  README.md  build.rs
src/: main.rs
