[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embedded-hal = "1.0.0"
panic-halt = "1.0.0"
rp235x-hal = { version = "0.2.0", features = ["binary-info", "critical-section-impl", "rt", "defmt"] }
